--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
                     <span id="hamburger"></span>
                 </button>
                 <ul id="menu" role="menu">
-                    <li><a href="#container-img-content">Home</a></li>
-                    <li><a href="#about-me-container">About</a></li>
-                    <li><a href="#section-resume-container">Resume</a></li>
-                    <li><a href="#section-work-container">Works</a></li>
+
+                    <li id="open-close-menu">
+                        <a href="#container-img-content" class="nav-link">Home</a></li>
+                    <li id="open-close-menu"><a href="#about-me-container">About</a>
+
+                    </li>
+                    <li id="open-close-menu">
+                        <a href="#section-resume-container" class="nav-link">Resume</a>
+                    </li>
+
+                    <li id="open-close-menu">
+                        <a href="#section-work-container" class="nav-link">Works</a>
+                    </li>
+
                 </ul>
             </nav>
         </header>
@@ -58,7 +68,7 @@
         </section>
 
         <section id="about-me-container">
-            <img src="./assets/img/portfolio.png" alt="Picture of Myself" class="lorenzo-img">
+            <img src="./assets/img/portfolio1.png" alt="Picture of Myself" class="lorenzo-img">
             <div class="div-infos-container">
                 <div class="adjust-my-infos-about-me">
                     <h1 class="info-heading-width">About me</h1>
