--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
                 </button>
                 <ul id="menu" role="menu">
 
-                    <li id="open-close-menu">
-                        <a href="#container-img-content" class="nav-link">Home</a></li>
-                    <li id="open-close-menu"><a href="#about-me-container">About</a>
-
+                     <li>
+                        <a href="#container-img-content" class="nav-link">Home</a>
                     </li>
-                    <li id="open-close-menu">
+
+                    <li>
+                        <a href="#about-me-container" class="nav-link">About</a>
+                    </li>
+
+                    <li>
                         <a href="#section-resume-container" class="nav-link">Resume</a>
                     </li>
 
-                    <li id="open-close-menu">
+                    <li>
                         <a href="#section-work-container" class="nav-link">Works</a>
                     </li>
 
