--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                     <i class="italic-size">Always studying and practicing to improve my html5 coding skills.</i>
                     <br><br>
                     <h1 class="css">CSS3</h1>
-                    <i class="italic-size">I love to play with CSS3, always practicing a lot to improve and improve my
-                        skills. Always
+                    <i class="italic-size">I love to play with CSS3, always practicing a lot to improve my
+                        skills and always
                         targeting to get better everyday.</i>
                     <br><br>
                     <h1 class="apis">APIs</h1>
